test/sema/positive/movesema/immut_ref.impala
fn f() -> () {
    let a = 4;
    let b = &a;
    let c = a;
    let d = *b;
    a = 3;
}
