test/sema/negative/borrowsema/init_already_init_1.impala
fn f() -> () {
    let a = 4;
    a = 3;
}
